added more crud added filters and join options to users added new helper to convert incoming Ids to actual mongoose id instances
